Invariant failure when receiving split config on first heartbeat in serverless mode

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 6.1.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • Server Serverless 2022-05-02, Server Serverless 2022-05-16
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      If a node in serverless mode receives its first hearbeat with a split config, we try to access member data about the local node on an uninitialized local rsConfig.

            Assignee:
            Matt Broadstone
            Reporter:
            Matt Broadstone
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: