SERVER-66083 Require rsConfig initialization to accept split config